@@ -3,6 +3,7 @@ package com.mken.itinerary.api;
 import java.io.IOException;
 import java.util.Arrays;
 import java.util.List;
+import java.util.stream.Collectors;
 
 import javax.ws.rs.core.MediaType;
 
@@ -82,7 +83,7 @@ public class AdminDestinationController {
 				}
 			}
 			return null;
-		}).toList());
+		}).collect(Collectors.toList()));
 		return response.setStatus(Response.Status.OK).setData(destinationService.getDestinationById(destinationId)).build();
 	}
 
